--- a/Vidly2/Views/Movies/Random.cshtml
+++ b/Vidly2/Views/Movies/Random.cshtml
@@ -1,8 +1,33 @@
-﻿@model Vidly2.Models.Movie
+﻿@model Vidly2.ViewModels.RandomMovieViewModel
 @{
     
     ViewBag.Title = "Random";
+    var className = Model.Customers.Count > 1 ? "popular" : null;
 }
 
-<h2>@Model.Name</h2>
+@*The rest is html razor syntax *@
+
+<h2 class="@className">@Model.Movie.Name</h2>
+@{ 
+    if(Model.Customers.Count == 0)
+    {
+        <text> Nobody rented this movie yet </text>
+    }
+    else
+    {
+        <ul>
+
+            @{ foreach (var customer in Model.Customers)
+                {
+                    <li> @customer.Name</li>
+                }
+            }
+
+        </ul>
+    }
+}
+
+
+
+
 
