--- a/Vidly2/Views/Shared/_NavBarPartial.cshtml
+++ b/Vidly2/Views/Shared/_NavBarPartial.cshtml
@@ -6,11 +6,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Vidly2", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
-                <li class="nav-item">@Html.ActionLink("Home", "Index", "Home")</li>
+                <li class="nav-item"><a href="/customers/index">Customers</a> </li>
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home")</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
