--- a/Vidly2/Views/Shared/_NavBarPartial.cshtml
+++ b/Vidly2/Views/Shared/_NavBarPartial.cshtml
@@ -13,6 +13,7 @@
                 <li class="nav-item"><a href="/customers/index">Customers</a> </li>
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home")</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li class="nav-item">@Html.ActionLink("Dumpit", "Dump", "Home")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
