--- a/Vidly2/Views/Customers/Index.cshtml
+++ b/Vidly2/Views/Customers/Index.cshtml
@@ -12,14 +12,27 @@
     }
     else
     {
-    <ul>
-        @{
-            foreach (var customer in Model.Customers)
-            {
-                <li> <a href="/customers/edit/@customer.Id">@customer.Name</a></li>
-            }
-        }
-    </ul>
+       <table class="table table-bordered table-hover">
+           <thead>
+               <tr>
+                   <th>Customer</th>
+                   <th>Membership Type</th>
+                   <th>Discount Rate</th>
+               </tr>
+           </thead>
+           <tbody>
+               @foreach(var customer in Model.Customers)
+               {
+                   <tr>
+                       <td>@Html.ActionLink(customer.Name, "Details", "Customers", new {id = customer.Id}, new { })</td>
+                       <td>@customer.MembershipType.Name</td>
+                       <td>@customer.MembershipType.DiscountRate%</td>
+                   </tr>
+               }
+
+           </tbody>
+       </table>
+
         
     }
 }
