--- a/Vidly2/Views/Shared/_Layout.cshtml
+++ b/Vidly2/Views/Shared/_Layout.cshtml
@@ -9,14 +9,14 @@
 
 </head>
 <body>
-    @Html.Partial("_NavBarPartial");
+    @Html.Partial("_NavBarPartial")
 
     
-    <div class="container body-content">
+    <div class="container body-content" style="margin-top:20px">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Vidly2 Application</p>
         </footer>
     </div>
 
