--- a/Vidly2/Views/Shared/_NavBarPartial.cshtml
+++ b/Vidly2/Views/Shared/_NavBarPartial.cshtml
@@ -11,6 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="/customers/index">Customers</a> </li>
+                <li class="nav-item"><a href="/movies/index">Movies</a> </li>
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home")</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home")</li>
                 <li class="nav-item">@Html.ActionLink("Dumpit", "Dump", "Home")</li>
