--- a/Vidly2/Views/Movies/index.cshtml
+++ b/Vidly2/Views/Movies/index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model Vidly2.ViewModels.MoviesIndexViewModel
 
 <div>
-    <h2>Movies</h2>
+    <h2>Movies <a href="/movies/new" class="btn btn-primary">new movie</a></h2>
+
+    
     
     <table class="table table-bordered table-hover">
         <thead>
@@ -14,7 +16,7 @@
             @foreach (var movie in Model.Movies)
             {
                 <tr>
-                    <td>@Html.ActionLink(movie.Name,"Details", new { Id = movie.Id }) </td>
+                    <td>@Html.ActionLink(movie.Name,"Edit", new { Id = movie.Id }) </td>
                     <td>@movie.Genre.Name</td>
                 </tr>
             }
